# cubefield

./: CMakeLists.txt  README.md
src/: cube.c  cube.h  cubefield.c  cubefield.h  main.c
